[package]
name = "keypad2serial"
version = "0.1.0"
authors = ["HimbeerserverDE <himbeerserverde@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1"
embedded-hal = "0.2.7"
esp-idf-hal = "0.38.0"
esp-idf-sys = { version = "0.31.8", features = ["binstart"] }

[build-dependencies]
embuild = "0.29"
anyhow = "1"
